Full OpenAPI compliance with metadata generation and improved API coherence; v. 1.4.0
